--- a/tutorial_notebooks/00_fundamentals_skimage.ipynb
+++ b/tutorial_notebooks/00_fundamentals_skimage.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -75,7 +77,7 @@
     "There are many tools and utilities in scikit-image, far too many to cover in a tutorial. This section is designed as a \n",
     "road map, to guide you as you explore or search for additional tools for your applications.\n",
     "\n",
-    "Each submodule of scikit-image has its own section, which you can navigate to below:\n",
+    "Each of the 15 submodule of scikit-image has its own section, which you can navigate to below:\n",
     "\n",
     "* [skimage.color](#color)\n",
     "* [skimage.data](#data)\n",
@@ -172,7 +174,7 @@
     "  * `feature.local_binary_pattern`\n",
     "  * `feature.multiblock_lbp`\n",
     "* Peak finding: `feature.peak_local_max`\n",
-    "* Object detction\n",
+    "* Object detection\n",
     "  * `feature.hog`\n",
     "  * `feature.match_template`\n",
     "* Stereoscopic depth estimation: `feature.daisy`\n",
@@ -450,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = io.imread('images/cells.tif')\n",
@@ -470,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -489,7 +495,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_, (a, b, c) = plt.subplots(nrows=1, ncols=3, figsize=(16, 4))\n",
@@ -509,7 +517,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sc.slice_explorer(data)"
@@ -525,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sc.display(data)"
@@ -545,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gamma_low_val = 0.5\n",
@@ -579,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "equalized = exposure.equalize_hist(data)\n",
@@ -610,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vmin, vmax = stats.scoreatpercentile(data, (0.5, 99.5))\n",
@@ -636,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rescaled = clipped"
@@ -645,7 +665,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -666,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
