--- a/tutorial_notebooks/01_filters_segmentation.ipynb
+++ b/tutorial_notebooks/01_filters_segmentation.ipynb
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1292,19 +1292,28 @@
     "mesh.set_edgecolor('black')\n",
     "ax.add_collection3d(mesh)\n",
     "\n",
-    "ax.set_xlabel('col')\n",
-    "ax.set_ylabel('row')\n",
-    "ax.set_zlabel('pln')\n",
-    "\n",
     "min_pln, min_row, min_col, max_pln, max_row, max_col = regionprops[selected_cell].bbox\n",
     "\n",
     "ax.set_xlim(min_row, max_row)\n",
     "ax.set_ylim(min_col, max_col)\n",
     "ax.set_zlim(min_pln, max_pln)\n",
     "\n",
+    "ax.set_xlabel('col')\n",
+    "ax.set_ylabel('row')\n",
+    "ax.set_zlabel('pln')\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
