--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -274,8 +274,16 @@
     "## Exercise 1:\n",
     "a) Select a different cell and calculate the actual surface area\n",
     "\n",
-    "b) explore parameters to improve the scatter plot, e.g., label and colors\n",
-    "label='blob:'+str(selected_cell), c=np.random.rand(len(verts))"
+    "b) explore parameters to improve the scatter plot, e.g., label and colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load solution02_01_a.py"
    ]
   },
   {
@@ -286,7 +294,7 @@
    },
    "outputs": [],
    "source": [
-    "%load solution02_01_a.py"
+    "%load solution02_01_b.py"
    ]
   },
   {
