--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -70,74 +70,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Microscope original spacing: [0.29  0.065 0.065]\n",
-      "* Microscope after rescaling images: [0.29 0.26 0.26]\n",
-      "* Microscope normalized spacing: [1.11538462 1.         1.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The microscope reports the following spacing:\n",
-    "original_spacing = np.array([0.2900000, 0.0650000, 0.0650000])\n",
-    "print(f'* Microscope original spacing: {original_spacing}')\n",
-    "\n",
-    "# We downsampled each slice 4x to make the data smaller\n",
-    "rescaled_spacing = original_spacing * [1, 4, 4]\n",
-    "print(f'* Microscope after rescaling images: {rescaled_spacing}')\n",
-    "\n",
-    "# Normalize the spacing so that pixels are a distance of 1 apart\n",
-    "spacing = rescaled_spacing / rescaled_spacing[2]\n",
-    "print(f'* Microscope normalized spacing: {spacing}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regionprops = measure.regionprops(relabeled.astype('int'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "def getLargestCC(segments):\n",
-    "        '''Return a mask corresponding to the largest object'''\n",
-    "        labels = measure.label(segments)\n",
-    "        largestCC = labels == np.argmax(np.bincount(labels.flat, weights=segments.flat))\n",
-    "        return largestCC"
+    "Let's create a simple visualizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60, 256, 256)\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46ded3e76e4f4d32b8a778d87c32dbee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='z', max=60), Output()), _dom_classes=('widget-interact',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "a=getLargestCC(relabeled)\n",
-    "print(a.shape)"
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "\n",
+    "def slicer(z):\n",
+    "    plt.imshow(relabeled[z,:,:], cmap='gray')\n",
+    "\n",
+    "interact(slicer, z=widgets.IntSlider(min=0,max=60,step=1,value=5));"
    ]
   },
   {
@@ -164,6 +133,7 @@
    "source": [
     "selected_cell = 3\n",
     "\n",
+    "regionprops = measure.regionprops(relabeled.astype('int'))\n",
     "# skimage.measure.marching_cubes expects ordering (row, col, pln)\n",
     "volume = (relabeled == regionprops[selected_cell].label).transpose(1, 2, 0)\n",
     "\n",
@@ -192,6 +162,27 @@
    "metadata": {},
    "source": [
     "Remember that the cell data comes from an anisotropic acquisition, then we need to customize spacing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# The microscope reports the following spacing:\n",
+    "original_spacing = np.array([0.2900000, 0.0650000, 0.0650000])\n",
+    "print(f'* Microscope original spacing: {original_spacing}')\n",
+    "\n",
+    "# We downsampled each slice 4x to make the data smaller\n",
+    "rescaled_spacing = original_spacing * [1, 4, 4]\n",
+    "print(f'* Microscope after rescaling images: {rescaled_spacing}')\n",
+    "\n",
+    "# Normalize the spacing so that pixels are a distance of 1 apart\n",
+    "spacing = rescaled_spacing / rescaled_spacing[2]\n",
+    "print(f'* Microscope normalized spacing: {spacing}')"
    ]
   },
   {
@@ -282,17 +273,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1c281b8940>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQYAAAD8CAYAAACVSwr3AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvIxREBQAADU5JREFUeJzt3H+o3fV9x/HnaxojtUrNrBJjmHZk\nMPvH0nBRwVEcsqr5J/YPh/5RQyekf0Roofsjbf+osH+6sbYgbEJKpXF0OmkrhuFmNRSkMK1R0piY\nWW9tprcJyboWKyuk6t77437veszn3NyTe8+555z4fMDlnPu533PuO8d7nn6/51eqCknq9XvjHkDS\n5DEMkhqGQVLDMEhqGAZJDcMgqTGyMCS5NckrSWaT7BrV75E0fBnF6xiSnAf8BPhzYA54Hrirql4e\n+i+TNHSj2mO4Dpitqteq6rfAI8C2Ef0uSUN2/oiudwPwRs/3c8D1i218QdbWhVw0olEkAbzFr35R\nVR8eZNtRhSF91t5zzJJkB7AD4EI+wPW5eUSjSAJ4ur7zn4NuO6pDiTlgY8/3VwHHejeoqt1VNVNV\nM2tYO6IxJC3HqMLwPLApyTVJLgDuBPaO6HdJGrKRHEpU1TtJ7gWeBM4DHqyqw6P4XZKGb1SPMVBV\nTwBPjOr6JY2Or3yU1DAMkhqGQVLDMEhqGAZJDcMgqWEYJDUMg6SGYZDUMAySGoZBUsMwSGoYBkkN\nwyCpYRgkNQyDpIZhkNQwDJIahkFSwzBIahgGSQ3DIKlhGCQ1DIOkhmGQ1DAMkhqGQVLDMEhqGAZJ\nDcMgqWEYJDUMg6SGYZDUMAySGuev5MJJjgJvAe8C71TVTJJ1wD8DVwNHgb+oql+tbExJq2kYewx/\nVlWbq2qm+34XsK+qNgH7uu8lTZFRHEpsA/Z05/cAt4/gd0gaoZWGoYDvJ3khyY5u7YqqOg7QnV7e\n74JJdiTZn2T/25xa4RiShmlFjzEAN1bVsSSXA08l+Y9BL1hVu4HdAJdkXa1wDklDtKI9hqo61p2e\nBB4DrgNOJFkP0J2eXOmQklbXssOQ5KIkFy+cBz4BHAL2Atu7zbYDj690SEmrayWHElcAjyVZuJ5/\nqqp/S/I88GiSe4DXgTtWPqak1bTsMFTVa8Cf9Fn/b+DmlQwlabx85aOkhmGQ1DAMkhqGQVLDMEhq\nGAZJDcMgqWEYJDUMg6SGYZDUMAySGoZBUsMwSGoYBkkNwyCpYRgkNQyDpIZhkNQwDJIahkFSwzBI\nahgGSQ3DIKlhGCQ1DIOkhmGQ1DAMkhqGQVLDMEhqGAZJDcMgqWEYJDUMg6TGkmFI8mCSk0kO9ayt\nS/JUkle700u79SS5P8lskoNJtoxyeEmjMcgew7eAW09b2wXsq6pNwL7ue4DbgE3d1w7ggeGMKWk1\nLRmGqnoG+OVpy9uAPd35PcDtPesP1bxngQ8lWT+sYSWtjuU+xnBFVR0H6E4v79Y3AG/0bDfXrUma\nIucP+frSZ636bpjsYP5wgwv5wJDHkLQSy91jOLFwiNCdnuzW54CNPdtdBRzrdwVVtbuqZqpqZg1r\nlzmGpFFYbhj2Atu789uBx3vW7+6enbgBeHPhkEPS9FjyUCLJw8BNwGVJ5oAvA18BHk1yD/A6cEe3\n+RPAVmAW+A3w6RHMLGnElgxDVd21yI9u7rNtATtXOpSk8fKVj5IahkFSwzBIahgGSQ3DIKlhGCQ1\nDIOkhmGQ1DAMkhqGQVLDMEhqGAZJjWF/UMvYPXnswFltf8uVm0c0iTS9zokwnG0MFrvsQiTOdH2G\nRO8HUx2GlQRhude3nN9pTDRtpjYMw47CKJ0+q6HQpJu6Bx+fPHZgqqLQz7TPr3PfVIXBO5S0OqYq\nDOcSI6dJNjVhOBfvSOfiv0nnhqkJg6TVYxgkNQyDpIZhkNQwDGPkC500qQzDmBgFTTLDIKlhGMbA\nvQVNOsMgqWEYVpl7C5oGhmEVGQVNi6kJw7TfqaZ9fr2/TNUHtdxy5eapeuORMdC0mpo9hgXTcmeb\nljmlfpYMQ5IHk5xMcqhn7b4kP09yoPva2vOzLySZTfJKkltGMfQk3+luuXLzRM8nDWKQPYZvAbf2\nWf96VW3uvp4ASHItcCfw0e4y/5DkvGEN22vS7nwGQeeSJR9jqKpnklw94PVtAx6pqlPAz5LMAtcB\n/77sCc9gnI85GAGdy1byGMO9SQ52hxqXdmsbgDd6tpnr1hpJdiTZn2T/25xa9hDjuIMaBZ3rlvus\nxAPAXwPVnX4V+EsgfbatfldQVbuB3QCXZF3fbQZ1+h11WHsRBkDvV8sKQ1WdWDif5BvAv3TfzgEb\neza9Cji27OmWqd8detBYGANpmYcSSdb3fPtJYOEZi73AnUnWJrkG2AT8aGUjDke/O/zC2sIDh0ZB\nmrfkHkOSh4GbgMuSzAFfBm5Kspn5w4SjwGcAqupwkkeBl4F3gJ1V9e5oRj97Z4qDpN9J1YoO74fi\nkqyr63PzuMeQzmlP13deqKqZQbadulc+Sho9wyCpYRgkNQyDpIZhkNQwDJIahkFSwzBIahgGSQ3D\nIKlhGCQ1DIOkhmGQ1DAMkhqGQVLDMEhqGAZJDcMgqWEYJDUMg6SGYZDUMAySGoZBUsMwSGoYBkkN\nwyCpYRgkNQyDpIZhkNQwDJIahkFSwzBIahgGSY0lw5BkY5IfJDmS5HCSz3br65I8leTV7vTSbj1J\n7k8ym+Rgki2j/kdIGq5B9hjeAT5fVX8M3ADsTHItsAvYV1WbgH3d9wC3AZu6rx3AA0OfWtJILRmG\nqjpeVS92598CjgAbgG3Anm6zPcDt3fltwEM171ngQ0nWD31ySSNzVo8xJLka+BjwHHBFVR2H+XgA\nl3ebbQDe6LnYXLcmaUoMHIYkHwS+C3yuqn59pk37rFWf69uRZH+S/W9zatAxJK2CgcKQZA3zUfh2\nVX2vWz6xcIjQnZ7s1ueAjT0Xvwo4dvp1VtXuqpqpqpk1rF3u/JJGYJBnJQJ8EzhSVV/r+dFeYHt3\nfjvweM/63d2zEzcAby4cckiaDucPsM2NwKeAl5Ic6Na+CHwFeDTJPcDrwB3dz54AtgKzwG+ATw91\nYkkjt2QYquqH9H/cAODmPtsXsHOFc0kaI1/5KKlhGCQ1DIOkhmGQ1DAMkhqGQVLDMEhqGAZJDcMg\nqWEYJDUMg6SGYZDUMAySGoZBUsMwSGoYBkkNwyCpYRgkNQyDpIZhkNQwDJIahkFSwzBIahgGSQ3D\nIKlhGCQ1DIOkhmGQ1DAMkhqGQVLDMEhqGAZJDcMgqWEYJDWWDEOSjUl+kORIksNJPtut35fk50kO\ndF9bey7zhSSzSV5Jcsso/wGShu/8AbZ5B/h8Vb2Y5GLghSRPdT/7elX9Xe/GSa4F7gQ+ClwJPJ3k\nj6rq3WEOLml0ltxjqKrjVfVid/4t4Aiw4QwX2QY8UlWnqupnwCxw3TCGlbQ6zuoxhiRXAx8DnuuW\n7k1yMMmDSS7t1jYAb/RcbI4+IUmyI8n+JPvf5tRZDy5pdAYOQ5IPAt8FPldVvwYeAP4Q2AwcB766\nsGmfi1ezULW7qmaqamYNa896cEmjM1AYkqxhPgrfrqrvAVTViap6t6r+F/gGvztcmAM29lz8KuDY\n8EaWNGqDPCsR4JvAkar6Ws/6+p7NPgkc6s7vBe5MsjbJNcAm4EfDG1nSqA3yrMSNwKeAl5Ic6Na+\nCNyVZDPzhwlHgc8AVNXhJI8CLzP/jMZOn5GQpkuqmsP/1R8i+S/gf4BfjHuWAVzGdMwJ0zOrcw5f\nv1n/oKo+PMiFJyIMAEn2V9XMuOdYyrTMCdMzq3MO30pn9SXRkhqGQVJjksKwe9wDDGha5oTpmdU5\nh29Fs07MYwySJsck7TFImhBjD0OSW7u3Z88m2TXueU6X5GiSl7q3lu/v1tYleSrJq93ppUtdzwjm\nejDJySSHetb6zpV593e38cEkWyZg1ol72/4ZPmJgom7XVfkohKoa2xdwHvBT4CPABcCPgWvHOVOf\nGY8Cl5229rfAru78LuBvxjDXx4EtwKGl5gK2Av/K/PtYbgCem4BZ7wP+qs+213Z/B2uBa7q/j/NW\nac71wJbu/MXAT7p5Jup2PcOcQ7tNx73HcB0wW1WvVdVvgUeYf9v2pNsG7OnO7wFuX+0BquoZ4Jen\nLS821zbgoZr3LPCh017SPlKLzLqYsb1tvxb/iIGJul3PMOdizvo2HXcYBnqL9pgV8P0kLyTZ0a1d\nUVXHYf4/EnD52KZ7r8XmmtTbedlv2x+10z5iYGJv12F+FEKvcYdhoLdoj9mNVbUFuA3YmeTj4x5o\nGSbxdl7R2/ZHqc9HDCy6aZ+1VZt12B+F0GvcYZj4t2hX1bHu9CTwGPO7YCcWdhm705Pjm/A9Fptr\n4m7nmtC37ff7iAEm8HYd9UchjDsMzwObklyT5ALmPyty75hn+n9JLuo+55IkFwGfYP7t5XuB7d1m\n24HHxzNhY7G59gJ3d4+i3wC8ubBrPC6T+Lb9xT5igAm7XRebc6i36Wo8irrEI6xbmX9U9afAl8Y9\nz2mzfYT5R3N/DBxemA/4fWAf8Gp3um4Msz3M/O7i28z/H+GexeZiflfy77vb+CVgZgJm/cduloPd\nH+76nu2/1M36CnDbKs75p8zvYh8EDnRfWyftdj3DnEO7TX3lo6TGuA8lJE0gwyCpYRgkNQyDpIZh\nkNQwDJIahkFSwzBIavwfeQiZnjvb6kEAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<Figure size 432x288 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "def getLargestCC(segments):\n",
-    "        '''Return a mask corresponding to the largest object'''\n",
-    "        labels = measure.label(segments)\n",
-    "        largestCC = labels == np.argmax(np.bincount(labels.flat, weights=segments.flat))\n",
-    "        return largestCC"
+    "%load solution02_01_c.py"
    ]
   },
   {
