--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -393,22 +393,7 @@
     "# ITK and ITKwidgets in itkwidgets\n",
     "- VTK is a powerful scientific visualization library with Python bindings, and speedy C++ backend. The library itkwidgets provides interactive ipywidgets to visualize images in 2D and 3D; \n",
     "- ITKwidgets are Jupyter widgets to visualize images, point sets, and meshes;\n",
-    "- More at: [repo] [examples] [docs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Dani TODO: discuss package \n",
-    "#https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html\n",
-    "#https://itk.org/ITKExamples/src/index.html\n",
-    "\n",
-    "#https://github.com/InsightSoftwareConsortium/itkwidgets"
+    "- More at: [[repo]](https://github.com/InsightSoftwareConsortium/itkwidgets) [[examples]](https://itk.org/ITKExamples/src/index.html) [[docs]](https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html)"
    ]
   },
   {
